# GDP_trailcam

./: GDP_trailcam.ino  overwrite_arduino_lib.sh  pin_assignement.txt
Arduino_work/: GDP_trailcam.ino
Arduino_work/examples/CameraWebServer/: CameraWebServer.ino  app_httpd.cpp  camera_pins.h
GDP-Trailcam-IDF/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
GDP-Trailcam-IDF/main/: CMakeLists.txt  Camera.c  Camera.h  Kconfig.projbuild  SDSPI.c  SDSPI.h  idf_component.yml  image_classifier.cpp  image_classifier.h  image_cropping.c  image_cropping.h  image_types.c  image_types.h  main.c  main.cpp  model.h  motion_analysis.c  motion_analysis.h  status_led.c  status_led.h
GDP-Trailcam-IDF/main/alternative_mains/: CamTest.c  freeRTOStest.c  multicamTest.c
arduino_libs_copy_dir/minus/: minus.cpp
examples/CameraWebServer/: CameraWebServer.ino  app_httpd.cpp
examples/HelloServer/: HelloServer.ino
src/add/: add.cpp  add.h
src/minus/: minus.h
